lesson5 README 내용 추가 (malloc, free), copy.c 내용추가, garbage.c, memory.c 추가

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "numbers": "c"
+        "numbers": "c",
+        "__config": "c",
+        "*.inc": "c"
     }
 }
