lesson6 README.md, binary_tree.c 이진탐색트리 내용 추가

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "numbers": "c",
         "__config": "c",
-        "*.inc": "c"
+        "*.inc": "c",
+        "__node_handle": "c"
     }
 }
